# software-development-2.0

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial.py  0002_user_name_fields.py  0003_user_type.py
prompts/: CODEX bot.txt  Cookbook.txt  ProjectInitializer.json  ProjectInitializerTemplateIdeas.json
prompts/features/: Cookbook-Features.txt
prompts/features/test1/: comiled_prompt.json  raw_prompt.json  tech_stack.txt
prompts/project_initialize/test2 - GOOD ENOUGH/: Test2.json
prompts/project_setup/: Cookbook-Setup.txt
prompts/project_setup/test1 - NOT THAT GOOD/: Test1.json
prompts/project_setup/test2 - GOOD ENOUGH/: Test2.json
prompts/test1/: Test1_Compiled.json
proto/: search.proto
scripts/: ci_local.sh  ci_local_inner.sh  generate_grpc.sh
src/ai_accel_api_platform/: grpc_server.py  logging.py  main.py  settings.py
src/ai_accel_api_platform/ai/: embeddings.py  rerank.py  retrieval.py
src/ai_accel_api_platform/api/: deps.py  middleware.py
src/ai_accel_api_platform/api/v1/: __init__.py  routes_auth.py  routes_embeddings.py  routes_health.py  routes_items.py  routes_search.py  routes_user.py
src/ai_accel_api_platform/core/: device.py  errors.py  schemas.py  security.py  utils.py
src/ai_accel_api_platform/cpp/: CMakeLists.txt  bindings.cpp  fast_ops.cpp  fast_ops.h
src/ai_accel_api_platform/db/: models.py  repositories.py  session.py  vector.py
src/ai_accel_api_platform/telemetry/: metrics.py  tracing.py
src/ai_accel_api_platform/workers/: rq_worker.py  tasks.py
tests/: conftest.py  test_device.py  test_embeddings.py  test_health.py  test_search.py  test_user_full_name.py
